# Dinodex

./: .en  .gitignore  README.md  compile.sh  compile_linux.sh  compile_mac.sh  copy.sh  dbcompile.py  dinodex.py  main.py  pyproject.toml  quickbuild.sh  remove.py  requirements.txt  temp_compile.sh
dbcompile.dist/temp/: insert.sql  notdoingshit.db  schema.sql
dinodex.dist/: libbrotlicommon-c55a5f7a.so.1.2.0  libbrotlidec-b57ddf63.so.1.2.0  libfreetype-ee1c40c4.so.6.20.4  libharfbuzz-0692f733.so.0.61230.0  liblcms2-cc10e42f.so.2.0.17  liblzma-61b1002e.so.5.8.2  libopenjp2-94e588ba.so.2.5.4  libpng16-4a38ea05.so.16.53.0  libpng16.so.16  libsharpyuv-95d8a097.so.0.1.2  libtiff-295fd75c.so.6.2.0  libwebp-d8b9687f.so.7.2.0  libwebpdemux-747f2b49.so.2.0.17  libwebpmux-7f11e5ce.so.3.1.2  libxcb-64009ff3.so.1.1.0  libzstd-761a17b6.so.1.5.7
dinodex_mac.dist/: libbrotlidec.1.2.0.dylib  libfreetype.6.dylib  libharfbuzz.0.dylib  libpng16.16.dylib  libtcl8.6.dylib  libtiff.6.dylib  libtk8.6.dylib  libwebp.7.dylib  libwebpdemux.2.dylib  libwebpmux.3.dylib  libxcb.1.1.0.dylib
dinodex_mac.dist/src/: dinodex.db
src/: MANIFEST.in  __init__.py  dinodex.db  dinodex.py  example.md
src/assets/: __init__.py  all_dino_get.py  all_dinos.json  config.json  no_dino.py  schema.sql
src/cli/: __init__.py  cli_main.py
src/config/: __init__.py  config.py
src/db/: __init__.py  db_writing.py  dino_classes.py  schema.sql  writing.py
src/gui/: gui_collect.py  gui_main.py
src/widget/: Dino_Widgets.py
temp/: notdoingshit.db  schema.sql
