[project]
name = "dinodex"
version = "0.1.0"
description = "Dinodex! An interactive terminal based dinosaur pokedex"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.3",
    "aiosignal==1.4.0",
    "anyio==4.12.1",
    "ascii-magic==2.7.4",
    "async-typer==0.1.10",
    "attrs==25.4.0",
    "build>=1.4.0",
    "certifi==2026.1.4",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "dotenv==0.9.9",
    "faker==40.1.2",
    "frozenlist==1.8.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "inquirer>=3.4.1",
    "inquirerpy>=0.3.4",
    "linkify-it-py==2.0.3",
    "markdown-it-py==4.0.0",
    "mdit-py-plugins==0.5.0",
    "mdurl==0.1.2",
    "multidict==6.7.1",
    "names==0.3.0",
    "nest-asyncio==1.6.0",
    "nuitka==2.8.10",
    "ordered-set==4.1.0",
    "pillow==12.1.0",
    "platformdirs==4.5.1",
    "propcache==0.4.1",
    "pygments==2.19.2",
    "python-dotenv==1.2.1",
    "questionary>=2.1.1",
    "requests==2.32.5",
    "rich==14.3.1",
    "ruff>=0.15.0",
    "setuptools>=82.0.0",
    "shellingham==1.5.4",
    "textual==7.5.0",
    "textual-image==0.8.5",
    "typer==0.21.1",
    "typing-extensions==4.15.0",
    "uc-micro-py==1.0.3",
    "urllib3==2.6.3",
    "yarl==1.22.0",
    "zstandard==0.25.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
dinodex = "dinodex:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]


[tool.setuptools.package-data]
# "mypackage" = ["assets/*.json", "assets/*.png", "assets/*.sql"]
assets = ["*.png", "*.sql"]




